[tool.poetry]
name = "silkaj"
version = "0.7.4"
description = "Powerfull, lightweight, and multi-platform command line client written with Python for Duniter’s currencies: Ğ1 and Ğ1-Test."
authors = ["Moul <moul@moul.re>"]
maintainers = ["Moul <moul@moul.re>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
homepage =  "https://silkaj.duniter.org"
repository = "https://git.duniter.org/clients/python/silkaj"
documentation = "https://git.duniter.org/clients/python/silkaj/tree/dev/doc"
keywords = ["g1", "duniter", "cryptocurrency", "librecurrency", "RTM"]

[tool.poetry.dependencies]
python = "^3.5.3"
duniterpy = "^0.54.3"
click = "^7.0"
ipaddress = "^1.0"
tabulate = "^0.8.3"
texttable = "^1.6"
PyNaCl = "^1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]
